2009-09-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Remove RTEMS_BSP_BOOTCARD_OPTIONS.

 2009-08-21	Joel Sherrill <joel.sherrill@OARcorp.com>

	* include/bsp.h: Eliminate BSPs defining NUMBER_OF_TERMIOS_PORTS.
	Should be automatically handled by confdefs.h or the application.

2009-08-17	Till Straumann <strauman@slac.stanford.edu>

	* network/tsec.c, network/if_tsec_pub.h:
	Fixed bugs in multicast support; added reference-count
	for hash-table entries which allows for the implementation
	of a 'deletion' routine.
	NOTE: mcast support largely untested.

2009-07-16	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac: Rename BSP_BOOTCARD_OPTIONS to
	RTEMS_BSP_BOOTCARD_OPTIONS. Add RTEMS_BSP_CLEANUP_OPTIONS so all BSPs
	have the same options.

2009-06-05	Till Straumann <strauman@slac.stanford.edu>

	* network/tsec.c, network/if_tsec_pub.h:
	implemented multicast support.

2009-04-28	Chris Johns <chrisj@rtems.org>

	* start/start.S: Update for boot_card command line change.

2009-03-05	Till Straumann <strauman@slac.stanford.edu>

	* include/bsp.h, start/start.S, startup/bspstart.c: 
	removed BSP_INIT_STACK_SIZE -- this BSP now also uses
	__stack defined by the linker script for the initial
	stack.
	Removed legacy code (inherited from old mvme2307 BSP
	but not relevant to this one) that tested trapping
	into PPCBug.

2009-03-05	Till Straumann <strauman@slac.stanford.edu>

	* startup/misc.c, flash/flashcfg.c, irq/irq_init.c,
	pci/detect_host_bridge.c: changed function arguments
	to silence compiler warnings.

2008-12-22	Ralf Corsépius <ralf.corsepius@rtems.org>

	* i2c/i2c_init.c: Include <errno.h> instead of <sys/errno.h>.

2008-12-07	Ralf Corsépius <ralf.corsepius@rtems.org>

	* bsp_specs: Remove -Qy from *link.

2008-12-05	Ralf Corsépius <ralf.corsepius@rtems.org>

	* bsp_specs: Remove motld_start_g.o.

2008-12-04	Joel Sherrill <joel.sherrill@oarcorp.com>

	* bsp_specs: Move -e start from *link to *startfile to avoid warning